force-app/main/default/objects/Lead/fields/Course_Interested__c.field-meta.xml
<CustomField>
    <fullName>Course_Interested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Interested</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>