force-app/main/default/objects/Lead/fields/Preferred_Campus__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Campus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Campus</label>
    <referenceTo>Campus__c</referenceTo>
    <relationshipLabel>Leads (Preferred Campus)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>