force-app/main/default/objects/Lead/fields/Preferred_Course__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Course</label>
    <referenceTo>Course_Offering__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>